k8s/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`argocd.homelab.bertbullough.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
